# Projet7

./: .dockerignore  .gitignore  .~lock.presentation.odp#  Dockerfile  README.md  commande_docker.txt  memo.txt  presentation.odp  pyproject.toml
faiss_index/: index.faiss  index.pkl
src/: api.py  chatbot.py  data_ingestion.py  retriever.py
test/: evaluate_rag.py  inspect_database.py  question-réponse.txt  rapport_evaluation.csv  test_api.py  test_ingestion.py
